# libnn

./: AUTHORS  Makefile.am  NEWS  README  configure.ac
examples/: Makefile.am  random_network.cc
include/: Connector.h  DendriteBase.h  Makefile.am  Neuron.h  NeuronBase.h  NeuronFunctor.h  SynapseBase.h  libnn.h
libnn/: Makefile.am  libnn.cc
